--- a/text/include/appendix_b.tex
+++ b/text/include/appendix_b.tex
@@ -1,11 +1,11 @@
-\chapter{Additional results for Score Matching}
+\chapter{Additional results for score matching}
 
-\section{Technical Results}
+\section{Technical results}
 \label{chap:Technical}
 
-\subsection{Exact solution for the Kernel Denoising Score Matching with RFF}
+\subsection{Exact solution for the kernel denoising score matching with RFF}
 \label{sec:exact_solution}
-We start with the first order optimality condition:
+We start with the first-order optimality condition:
 \begin{equation*}
     \int p_{\varepsilon}({\bf y}) A^*({\bf y})\nabla V(A({\bf y})f)d{\bf y} + \lambda f = 0,
 \end{equation*}
@@ -15,7 +15,7 @@ Denoting
 \begin{align*}
     &{\bm \alpha}({\bf y}) = -\frac{1}{\lambda}\nabla V(A({\bf y})f),\quad f = \int p_{\varepsilon}({\bf y})A^*({\bf y}){\bm \alpha}({\bf y})d {\bf y},
 \end{align*}
-the first order optimality condition could be rewritten as an integral equation on
+the first-order optimality condition could be rewritten as an integral equation on
 ${\bm \alpha}({\bf y})$:
 \begin{equation}
     {\bm \alpha}({\bf y}) = -\frac{1}{\lambda}\nabla V\left(\int p_{\varepsilon}({\bf z})A({\bf y})A^*({\bf z})\alpha({\bf z})d{\bf z}\right),
@@ -26,16 +26,16 @@ The gradient of $V$ is given
 by~$\nabla V = (\frac{1}{n}, \frac{1}{n}, \ldots, \frac{1}{n}, 1)^{\top}$.
 Then, we have ${\bm \alpha}({\bf y}) = ({\bm \beta}^{\top}({\bf y}), \delta)^{\top}$,
 where $\delta = -\frac{1}{\lambda}$.
-The integral equation on ${\bm \beta}({\bf y})$ can be expressed as
+Therefore, the integral equation on ${\bm \beta}({\bf y})$ can be expressed as
 \begin{equation}
     {\bm \beta}({\bf y}) = -\frac{1}{n\lambda}\int p_{\varepsilon}({\bf z})\hat{A}({\bf y})\hat{A}({\bf z})^*{\bm \beta}({\bf z})d{\bf z} + \frac{1}{n\lambda^2}\int p_{\varepsilon}({\bf z}) \hat{A}({\bf y}) \phi_m({\bf z}, \cdot)d{\bf z},
 \end{equation}
 where $(\hat{A}({\bf y})f)_i = (A({\bf y})f)_i$, $i = 1, \ldots, m - 1$.
 Let $b = \int p_{\varepsilon}({\bf y})\phi_m({\bf y}, \cdot) d {\bf y}$ and
 $C = \int p_{\varepsilon}({\bf y})\hat{A}^*({\bf y}){\bm \beta}({\bf y}) d {\bf y}$.
-Then we search for the solution of \eqref{eq:beta_integal} in the form
+Next, we search for the solution of \eqref{eq:beta_integal} in the form
 ${\bm \beta}({\bf y}) = -\frac{1}{n\lambda}\hat{A}({\bf y})C + \frac{1}{n\lambda^2}\hat{A}({\bf y})b$.
-In this case we have
+In this case, we have
 \begin{equation*}
     \hat{A}({\bf y})\left[C + \frac{1}{n\lambda}BC - \frac{1}{n\lambda^2}Bb\right] = 0,
 \end{equation*}
@@ -54,7 +54,7 @@ In fact, since
     C + \frac{1}{n\lambda}BC - \frac{1}{n\lambda^2}Bb \in {\rm Ker}\hat{A}({\bf y}) \subseteq
     \mathcal{H}
 \]
-and $B + n\lambda I$ is continuously invertible we have that $C^* \in \mathcal{H}$.
+and $B + n\lambda I$ is continuously invertible, we have that $C^* \in \mathcal{H}$.
 Finally, we have
 \[
     f^* = B\left[-\frac{1}{n\lambda}C^* + \frac{1}{n\lambda^2}b\right] = C^* - \frac{1}{\lambda}b - \gamma \in \mathcal{H},
@@ -66,7 +66,7 @@ where we assume $\gamma \in {\rm Ker}\hat{A}({\bf y})$.
 \subsection{RFF solution derivation}
 \label{sec:rff_solution_derivation}
 Let us use the expressions for the solution without noise
-(here for simplicity the term with $\partial_i \log q_0({\bf x}_a)$ is omitted):
+(for simplicity, the term with $\partial_i \log q_0({\bf x}_a)$ is omitted here):
 \begin{equation*}
     \left [ \hat{A}({\bf 0})\hat{A}({\bf 0})^* \right ]_{(a - 1)d + i, (b - 1)d + j} =
     \partial_i\partial_{j + d}k({\bf x}_a, {\bf x}_b),~\quad a, b \in [n],~i, j \in [d],
@@ -81,7 +81,7 @@ and
 $\hat{A}({\bf y}){\bm \phi}_m({\bf z}, \cdot) * p_{\varepsilon}({\bf z}) \approx \frac{1}{n}
 \partial{\bm \Phi}_y(\partial^2{\bm \Phi}_z * p_{\varepsilon}({\bf z}))^{\top}{\bf 1}$.
 
-Now we have everything to obtain RFF approximation of \eqref{eq:beta_finite_sample}:
+Now, we can obtain the RFF approximation of \eqref{eq:beta_finite_sample}:
 \begin{align*}
     {\bm \beta}_K = -\frac{1}{nK\lambda}\partial {\bm \Phi}_K\partial {\bm \Phi}_K^{\top}{\bm \beta}_K  + \frac{1}{n^2\lambda^2}\partial{\bm \Phi}_K \odot (\partial^2 {\bm \Phi}_z * p({\bf z}))^{\top}{\bf 1},
 \end{align*}
@@ -116,11 +116,11 @@ we obtain the following expression for the descretized solution $f_K$:
     -\frac{1}{\lambda} {\bm \phi}(\cdot)^{\top}{\bm h}.
 \end{align*}
 By taking a limit over $K \to \infty$, and using
-${\bm H} = \lim\limits_{K \to \infty}\frac{1}{K}\partial {\bm \Phi}_K^{\top}\partial{\bm\Phi}_K$ alond with
+${\bm H} = \lim\limits_{K \to \infty}\frac{1}{K}\partial {\bm \Phi}_K^{\top}\partial{\bm\Phi}_K$ along with
 \begin{equation*}
-    \lim\limits_{K \to \infty}(n\lambda{\bf I} + \frac{1}{K}\partial {\bm \Phi}^{\top}_K\partial {\bm \Phi}_K) \lim\limits_{K \to \infty}\frac{1}{K}\partial {\bm \Phi}^{\top}_K{\bm \beta}_K = \lim\limits_{K \to \infty}\frac{1}{K\lambda}\partial {\bm \Phi}^{\top}_K\partial {\bm \Phi}_K{\bm h}
+    \lim\limits_{K \to \infty}(n\lambda{\bf I} + \frac{1}{K}\partial {\bm \Phi}^{\top}_K\partial {\bm \Phi}_K) \lim\limits_{K \to \infty}\frac{1}{K}\partial {\bm \Phi}^{\top}_K{\bm \beta}_K = \lim\limits_{K \to \infty}\frac{1}{K\lambda}\partial {\bm \Phi}^{\top}_K\partial {\bm \Phi}_K{\bm h},
 \end{equation*}
-the solution $f^*$ is given:
+the solution $f^*$ is given as
 \begin{align*}
     f_{m}^* = \lim\limits_{K \to \infty} f_K
     &= -\frac{1}{n\lambda^2}{\bm\phi}(\cdot)^{\top}{\bm H}({\bm H} +
@@ -136,7 +136,7 @@ where index $m$ refers to the number of RFF features.
 
 \subsection{Proof for the error bounds of score matching with RFF}
 \label{sec:error_bound_proof}
-The idea of the proof is to upper bound the expected square difference between solutions:
+The idea of this proof is to upper bound the expected square difference between solutions:
 \begin{equation}
     \mathbb{E}_{{\bf x}, {\bf w}}(f_{n, m}^*({\bf x}) - f_n^*({\bf x}))^2,
 \end{equation}
@@ -166,7 +166,7 @@ is expressed as follows:
 \end{align*}
 The above expectation is taken jointly over random Fourier weights and given points
 ${\bf x} \sim p_0$.
-It can be written as
+It can then be written as
 $\mathbb{E}_{{\bf x}, {\bf w}}[f] = \mathbb{E}_{{\bf w}}\mathbb{E}_{{\bf x}}[f | {\bf w}]$.
 The first term in the above expression is the difference between $\hat{\xi}$
 and its RFF approximation $\hat{\xi}_m$, so, we have:
@@ -180,7 +180,7 @@ where the first inequality is obtained using
 $\sup_{\bf x}|\phi_i({\bm W}{\bf x} + {\bm b})| \leq 1$.
 As this expression does not depend on ${\bf x}$, the joint expectation will be the same.
 
-For the second term in $f_{n, m}^*({\bf x}) - f_n^*({\bf x})$ derivation of the
+For the second term in $f_{n, m}^*({\bf x}) - f_n^*({\bf x})$, derivation of the
 upper bound is technically the same, but with lower-order derivatives, so
 \begin{align*}
     \mathbb{E}_{{\bf w}}\left[(\partial{\bm k}(\cdot) -
@@ -189,7 +189,7 @@ upper bound is technically the same, but with lower-order derivatives, so
     \frac{1}{m}\|\partial\partial {\bm K}^{\frac{1}{2}}(\partial\partial {\bm K} + \lambda n{\bf I})^{-1}\partial\partial^2 {\bm K}{\bf 1}\|^2.
 \end{align*}
 
-Third them:
+The third them is
 \begin{align*}
     \mathbb{E}_{{\bf x, w}}&\left[{\bm \phi}^{\top}(\cdot)\partial\bm{\Phi}^{\top}\left[(\partial\partial {\bm K} + \lambda n{\bf I})^{-1} - (\partial\bm{\Phi}\partial\bm{\Phi}^{\top} + \lambda n {\bf I})^{-1}\right]\partial\partial^2 {\bm K}{\bf 1}\right]^2 \\
     &= \mathbb{E}_{{\bf x, w}}\left[{\bm \phi}^{\top}(\cdot)\partial\bm{\Phi}^{\top}(\partial\bm{\Phi}\partial\bm{\Phi}^{\top} + \lambda n{\bf I})^{-1}(\partial\partial {\bm K} - \partial\bm{\Phi}\partial\bm{\Phi}^{\top})(\partial\partial {\bm K} + \lambda n {\bf I})^{-1}\partial\partial^2 {\bm K}{\bf 1}\right]^2\\
@@ -203,10 +203,10 @@ where only $\bf R$ depends on ${\bf x}$.
     &= \frac{1}{n} (\partial\bm{\Phi}\partial\bm{\Phi}^{\top} + \lambda n{\bf I})^{-1}\partial\bm{\Phi}
     (\bm{\Phi}^{\top}\bm{\Phi} + \varepsilon n I)\partial\bm{\Phi}^{\top}(\partial\bm{\Phi}\partial\bm{\Phi}^{\top} + \lambda n{\bf I})^{-1}
 \end{align*}
-This inequality holds with probability $1 - \delta$ for
+This inequality holds with the probability $1 - \delta$ for
 $n \geq \frac{8}{3\varepsilon^2} \log\frac{m}{\delta}$
 %$n \geq \frac{8 \sup_{\bf x}k({\bf x}, {\bf x})}{3\varepsilon^2} \log\frac{m}{\delta}$
-and obtained from the Bernstein inequality assuming that the weights are fixed \cite{Tropp_2015}.
+and is obtained from the Bernstein inequality assuming that the weights are fixed \cite{Tropp_2015}.
 \begin{align*}
     \lambda_{\max}({\bf R})
     &= \frac{1}{n}\lambda_{\max}\left[(\partial\bm{\Phi}\partial\bm{\Phi}^{\top} +
@@ -226,18 +226,18 @@ and obtained from the Bernstein inequality assuming that the weights are fixed \
     & = {\bf 1}^{\top}\partial\partial^2 {\bm K}^{\top}(\partial\partial {\bm K} + \lambda n {\bf I})^{-1}(\mathbb{E}_{\bf w}\partial\bm{\Phi}\partial\bm{\Phi}^{\top}\partial\bm{\Phi}\partial\bm{\Phi}^{\top} - \partial\partial {\bm K}^2)(\partial\partial {\bm K} + \lambda n {\bf I})^{-1}\partial\partial^2 {\bm K}{\bf 1}
 \end{align*}
 \begin{align*}
-    \mathbb{E}_{\bf w}\partial\bm{\Phi}\partial\bm{\Phi}^{\top}\partial\bm{\Phi}\partial\bm{\Phi}^{\top} = \frac{m - 1}{m} \partial\partial {\bm K}^2 + \frac{1}{m}{\bf D}_1
+    \mathbb{E}_{\bf w}\partial\bm{\Phi}\partial\bm{\Phi}^{\top}\partial\bm{\Phi}\partial\bm{\Phi}^{\top} = \frac{m - 1}{m} \partial\partial {\bm K}^2 + \frac{1}{m}{\bf D}_1.
 \end{align*}
-where the latter term is obtained under assumption that ${\bf D}_1$ does not depend on
+The latter term here is obtained under the assumption that ${\bf D}_1$ does not depend on
 ${\bf x}$.
-This assumption holds for a sufficiently smooth kernels and we can
-rewrite the expression under an expectation as polynomial of weights times
-trigonometric function.
+This assumption holds for sufficiently smooth kernels and we can
+rewrite the expression under an expectation as the polynomial of weights times
+the trigonometric function.
 \begin{align*}
     \mathbb{E}_{\bf w}&\|(\partial\partial {\bm K} - \partial\bm{\Phi}\partial\bm{\Phi}^{\top})(\partial\partial {\bm K} + \lambda n {\bf I})^{-1}\partial\partial^2 {\bm K}{\bf 1}\|^2
     \leq \frac{1}{m}\|{\bf D}_1^{\frac{1}{2}}(\partial\partial {\bm K} + \lambda n {\bf I})^{-1}\partial\partial^2 {\bm K}{\bf 1}\|^2
 \end{align*}
-Analogously, for the last term under assumption that ${\bf D}_2 < \infty$ we have
+Analogously, for the last term, using the assumption that ${\bf D}_2 < \infty$, we have
 \begin{align*}
     \mathbb{E}_{{\bf x, w}} \partial\bm{\Phi}\partial^2\bm{\Phi}^{\top}\partial\bm{\Phi}\partial^2\bm{\Phi}^{\top} \leq \frac{1}{m}\|{\bf D}_2^{\frac{1}{2}}{\bf 1}\|^2.
 \end{align*}
@@ -268,9 +268,9 @@ Finally, combining all the above, we have
         \cos(\mathbf{w}^\top \mathbf{x}) * \mathcal{N}(0, \sigma^2\mathbf{I}) &=
         %\int_\mathbf{y} \cos(\mathbf{w}^\top(\mathbf{x} - \mathbf{y}))
         %\frac{\exp\left(-\frac{\|\mathbf{y}\|^2}{2\sigma^2}\right )}{Z} d\mathbf{y}
-         e^{-\frac{\sigma^2}{2}\|\mathbf{w}\|_2^2}\cos(\mathbf{w}^\top \mathbf{x})
+         e^{-\frac{\sigma^2}{2}\|\mathbf{w}\|_2^2}\cos(\mathbf{w}^\top \mathbf{x}),
     \end{align*}
-    we will obtain:
+    we will obtain
     \begin{align*}
         \sin(\mathbf{w^\top x} + b) \sin(\mathbf{v^\top x} + c) * p_{\varepsilon}
         &= \frac{1}{2}\left[\cos ((\mathbf{w - v})^\top \mathbf{x} + b - c) - \cos ((\mathbf{w + v} + b + c)^\top \mathbf{x})\right] * p_{\varepsilon}\\
@@ -282,31 +282,31 @@ Finally, combining all the above, we have
             e^{-\frac{\sigma^2}{2}\|{\bf w}_i - {\bf w}_j\|_2^2}\cos (({\bf w}_i - {\bf w}_j)^\top \mathbf{x}_a + {\bf b}_i - {\bf b}_j)
             \right .\nonumber \\
             \left .
-            - e^{-\frac{\sigma^2}{2}\|{\bf w}_i + {\bf w}_j\|_2^2}\cos (({\bf w}_i + {\bf w}_j)^\top \mathbf{x}_a + {\bf b}_i + {\bf b}_j)
+            - e^{-\frac{\sigma^2}{2}\|{\bf w}_i + {\bf w}_j\|_2^2}\cos (({\bf w}_i + {\bf w}_j)^\top \mathbf{x}_a + {\bf b}_i + {\bf b}_j).
         \right]
     \end{align}
-    Next, firstly, assume that $q_0$ is uniform:
+    Next, firstly assume that $q_0$ is uniform:
     \begin{align*}
         {\bm h}
         &= \frac{1}{n}\sum_{a = 1}^n\sum_{i = 1}^d \partial_i^2 \phi(\bm{W}{\bf x}_a + \bm{b}) * p_{\varepsilon}\\
         &= -\frac{1}{n\sqrt{M}}\sum_{a = 1}^n\sum_{i = 1}^d \bm{W}_{:, i}^2 \odot \cos(\bm{W}{\bf x}_a + \bm{b}) * p_{\varepsilon}\\
         &= -\frac{1}{n\sqrt{M}}\sum_{a = 1}^n {\rm diag}(\bm{W}\bm{W}^{\top})\odot e^{-\frac{\sigma^2}{2}{\rm diag}(\bm{W}\bm{W}^{\top})} \odot \cos(\bm{W}{\bf x}_a + \bm{b})
     \end{align*}
-    For a multivariate normal $q_0(\bf x) = {\cal N}({\bm \mu}, {\bm \Sigma})$, $\nabla\log q_0(\bf x) = -{\bm \Sigma}^{-1}({\bf x} - {\bm \mu})$ there will be additional term to ${\bm h}$
+    For a multivariate normal $q_0(\bf x) = {\cal N}({\bm \mu} and {\bm \Sigma})$, $\nabla\log q_0(\bf x) = -{\bm \Sigma}^{-1}({\bf x} - {\bm \mu})$, there will be additional term to ${\bm h}$:
     \begin{align*}
         {\bm h}
         &= \frac{1}{n}\sum_{a = 1}^n\sum_{i = 1}^d \partial_i \phi(\bm{W}{\bf x}_a + \bm{b})\partial_i \log q_0({\bf x}_a) * p_{\varepsilon}\\
         &= -\frac{1}{n\sqrt{M}}\sum_{a = 1}^n\sum_{i = 1}^d \bm{W}_{:, i}\sin(\bm{W}{\bf x}_a + \bm{b})\partial_i \log q_0({\bf x}_a) * p_{\varepsilon}\\
-        &= -\frac{1}{n\sqrt{M}} \sum_{a = 1}^n \sin(\bm{W}{\bf x}_a + \bm{b}) \odot \bm{W} \nabla\log q_0({\bf x}_a) * p_{\varepsilon}
+        &= -\frac{1}{n\sqrt{M}} \sum_{a = 1}^n \sin(\bm{W}{\bf x}_a + \bm{b}) \odot \bm{W} \nabla\log q_0({\bf x}_a) * p_{\varepsilon}.
     \end{align*}
-    using
+    Using
     \begin{align*}
     \mathbf{w}^\top {\bm \Sigma}^{-1}(\mathbf{x} - {\bm \mu}) \sin (\mathbf{w}^\top \mathbf{x}) * p_{\varepsilon}
     &=
     e^{-\frac{\sigma^2 \|\mathbf{w}\|^2}{2}}
     \mathbf{w}^\top{\bm \Sigma}^{-1}\left [
         (\mathbf{x} - {\bm \mu})\sin(\mathbf{w}^\top \mathbf{x}) + \sigma^2 \mathbf{w}\cos(\mathbf{w}^\top \mathbf{x})
-    \right ]
+    \right ],
     \end{align*}
     we obtain
     \begin{align}
@@ -316,15 +316,15 @@ Finally, combining all the above, we have
         + \sigma^2\cos(\bm{W}{\bf x}_a + \bm{b})\odot {\rm diag}(\bm{W}{\bm \Sigma}^{-1}\bm{W}^{\top})
         \right]
     \end{align}
-    In the case of arbitrary $q_0$ we use Taylor expansion:
+    In the case of arbitrary $q_0$, we use the Taylor expansion:
     \begin{equation*}
         \nabla \log q_0(\mathbf{x} + {\bm \varepsilon}) \approx
         \nabla \log q_0(\mathbf{x}) + \nabla^2 \log q_0(\mathbf{x}) {\bm \varepsilon}
     \end{equation*}
-    In the vicinity of $\mathbf{x}$ it is equivalent to previous case and the additional term is obtained with simple replacement: $-{\bm \Sigma}^{-1} \to \nabla^2 \log q_0(\mathbf{x})$ and $-{\bm \Sigma}^{-1}({\bf x} - {\bm \mu}) \to \nabla \log q_0(\mathbf{x})$.
+    In the vicinity of $\mathbf{x}$, it is equivalent to the previous case and the additional term is obtained with a simple replacement: $-{\bm \Sigma}^{-1} \to \nabla^2 \log q_0(\mathbf{x})$ and $-{\bm \Sigma}^{-1}({\bf x} - {\bm \mu}) \to \nabla \log q_0(\mathbf{x})$.
 
-\subsection{Derivation of \texorpdfstring{$\bm H$} and \texorpdfstring{$\bm h$}
-for arc-cosine kernel}
+\subsection{Derivation of \texorpdfstring{$\bm H$ and $\bm h$
+for arc-cosine kernels}.}
 \label{sec:Hh_arccos}
 \begin{align*}
         {\bm H}
@@ -333,7 +333,7 @@ for arc-cosine kernel}
         &= \sum\limits_{a = 1}^n\sum\limits_{i = 1}^d \bm{W}_{:, i}\bm{W}_{:, i}^\top \odot {\bf 1}(\bm{W}{\bf x}_a) \odot p^2(\bm{W}{\bf x}_a)^{p - 1}\left((\bm{W}{\bf x}_a)^{p - 1}\right)^{\top} * p_{\varepsilon}\\
         \label{eq:H_derivation}
     \end{align*}
-    Considering $p = 2$, uniform base density $q_0$ and isotropic Gaussian noise we will obtain:
+    Considering $p = 2$, with uniform base density $q_0$ and isotropic Gaussian noise, we will obtain:
     \begin{align*}
         \bm{W}{\bf x}_a{\bf x}_a^{\top}\bm{W}^{\top} * p_{\varepsilon}
         & = \bm{W}\mathbb{E}_{p_{\varepsilon}}({\bf x}_a + {\bm \varepsilon})({\bf x}_a + {\bm \varepsilon})^{\top}\bm{W}^{\top} * p_{\varepsilon} = \bm{W}({\bf x}_a{\bf x}_a^{\top} + \sigma^2{\bf I})\bm{W}^{\top}
@@ -342,19 +342,19 @@ for arc-cosine kernel}
     \begin{equation}
         {\bm H} = 4\bm{W}\bm{W}^{\top} \odot \sum_{a = 1}^n{\bf 1}(\bm{W}{\bf x}_a) \odot \bm{W}({\bf x}_a{\bf x}_a^{\top} + \sigma^2{\bf I})\bm{W}^{\top}
     \end{equation}
-    Moving to the computation of ${\bm h}$ we have:
+    Moving to the computation of ${\bm h}$, we have:
     \begin{align*}
         {\bm h}
         &= \frac{1}{n}\sum_{a = 1}^n\sum_{i = 1}^d \partial_i^2 \phi(\bm{W}{\bf x}_a) * p_{\varepsilon}\\
         &= \frac{2}{n}\sum_{a = 1}^n\sum_{i = 1}^d \bm{W}_{:, i}^2 \odot {\bf 1}(\bm{W}{\bf x}_a) \odot (\bm{W}{\bf x}_a) * p_{\varepsilon}\\
-        &= \frac{2}{n}{\rm diag}(\bm{W}\bm{W}^{\top}) \odot \sum_{a = 1}^n {\bf 1}(\bm{W}{\bf x}_a) \odot (\bm{W}{\bf x}_a)
+        &= \frac{2}{n}{\rm diag}(\bm{W}\bm{W}^{\top}) \odot \sum_{a = 1}^n {\bf 1}(\bm{W}{\bf x}_a) \odot (\bm{W}{\bf x}_a),
     \end{align*}
-    where the last holds for any symmetric zero-mean density.
+    where the last line holds for any symmetric zero-mean density.
 
 %\newpage
-\subsection{Taylor approximation of denoising score-matching}
+\subsection{The Taylor approximation of denoising score-matching}
 \label{sec:Taylor}
-    Considering data corrupted with a small Gaussian noise $\hat{\mathbf{x}} = \mathbf{x} + {\bm \varepsilon}$, ${\bm \varepsilon}\sim {\cal N}(\mathbf{0}, \sigma^2 \mathbf{I})$ and via applying Taylor expansion to the model density $p_m$ we obtain
+    Considering the data corrupted by a small Gaussian noise $\hat{\mathbf{x}} = \mathbf{x} + {\bm \varepsilon}$, ${\bm \varepsilon}\sim {\cal N}(\mathbf{0}, \sigma^2 \mathbf{I})$ and by applying the Taylor expansion to the model density $p_m$, we obtain
     %, $s_m(x, \theta) = \nabla_x\log p_m(x, \theta)$
     %\begin{align*}
     %    J_{\varepsilon}(\theta) = \EE_{p_d}\EE_{\varepsilon}\left[{\rm tr}(\nabla_x s_m(\hat{x}, \theta)) + \frac{1}{2}\|s_m(\hat{x}, \theta)\|_2^2\right]
@@ -363,7 +363,7 @@ for arc-cosine kernel}
     %    p_m(x + \varepsilon, \theta) = p_m(x, \theta) + \nabla_x p_m(x, \theta)^{\top} \varepsilon + \frac{1}{2}\varepsilon^{\top}\nabla^2_xp_m(x, \theta)\varepsilon + O(\|\varepsilon\|^3)
     %\end{align*}
     \begin{align*}
-        \log p_m(\mathbf{x} + {\bm \varepsilon}, {\bm \theta}) = \log p_m(\mathbf{x}, {\bm \theta}) + \nabla\log p_m(\mathbf{x}, {\bm \theta})^{\top}{\bm \varepsilon} + \frac{1}{2}{\bm \varepsilon}^{\top}\nabla^2\log p_m(\mathbf{x}, {\bm \theta})^{\top}{\bm \varepsilon} + O(\|{\bm \varepsilon}\|_2^3)
+        \log p_m(\mathbf{x} + {\bm \varepsilon}, {\bm \theta}) = \log p_m(\mathbf{x}, {\bm \theta}) + \nabla\log p_m(\mathbf{x}, {\bm \theta})^{\top}{\bm \varepsilon} + \frac{1}{2}{\bm \varepsilon}^{\top}\nabla^2\log p_m(\mathbf{x}, {\bm \theta})^{\top}{\bm \varepsilon} + O(\|{\bm \varepsilon}\|_2^3),
     \end{align*}
     where ${\bm \theta}$ denotes a vector of model parameters, $\mathbb{E}[\varepsilon] = {\bf 0}$, $\mathbb{E}[\varepsilon\varepsilon^{\top}] = \sigma^2 {\bf I}$.
     %Assume $\nabla_x^i \EE [\cdots] = \EE \nabla^i_x (\cdots)$, $i = 1, 2$.
@@ -401,9 +401,9 @@ for arc-cosine kernel}
     %    J_{\varepsilon}(\theta) &\approx J(\theta) + \frac{\gamma}{2}\EE_{p_d}\left[\Delta_x{\rm tr}H + {\rm tr}H^{\top}H\right]
     %\end{align*}
 %\newpage
-\subsection{Nystr\"{o}m kernel approximation}
+\subsection{The Nystr\"{o}m kernel approximation}
 \label{sec:Nystrom}
-Let ${\bm K}$ be a sample Gram matrix, then for Nystr\"{o}m kernel approximation \cite{Chen2016ErrorAO} we have:
+Let ${\bm K}$ be a sample Gram matrix, then for the Nystr\"{o}m kernel approximation \cite{Chen2016ErrorAO}, we have:
 \[
     {\bm K} =
     \begin{bmatrix}
@@ -424,7 +424,7 @@ Let ${\bm K}$ be a sample Gram matrix, then for Nystr\"{o}m kernel approximation
     \phi(x) =
     {\bm K}_{11}^{-\frac{1}{2}}{\bm k}({\bf x})
 \]
-where ${\bm k}({\bf x}) = \begin{bmatrix} {\bm k}({\bf x}, {\bf x}_1) & \ldots & {\bm k}({\bf x}, {\bf x}_M)\end{bmatrix}^{\top}$, $M$ is the amount of subsampled points.
+where ${\bm k}({\bf x}) = \begin{bmatrix} {\bm k}({\bf x}, {\bf x}_1) & \ldots & {\bm k}({\bf x} and {\bf x}_M)\end{bmatrix}^{\top}$, $M$ is the amount of subsampled points.
 \[
     \partial {\bm K} = \begin{bmatrix}
         \partial_1 {\bm k}^\top({\bf x}_1) \\
@@ -481,8 +481,8 @@ where ${\bm k}({\bf x}) = \begin{bmatrix} {\bm k}({\bf x}, {\bf x}_1) & \ldots &
 
 \begin{table}[!h]
     \centering
-\caption{Results of score-matching algorithms, $100$ features and $1000$ sample size for cosine, uniform, banana and funnel distributions.}
-    \label{tab:tab:2d_1000_100_1}    
+\caption{Results of score-matching algorithms; $100$ features and $1000$ sample size for cosine, uniform, banana and funnel distributions.}
+    \label{tab:tab:2d_1000_100_1}
     \begin{tabular}{lcccccccc}
 \toprule
 Distribution &  \multicolumn{2}{c}{Cosine} & \multicolumn{2}{c}{Uniform} & \multicolumn{2}{c}{Banana}& \multicolumn{2}{c}{Funnel}\\
@@ -504,8 +504,8 @@ W$_1$               &        \textbf{0.251} &   0.372 &       0.06 &  \textbf{0.
 
 \begin{table}[H]
     \centering
-    \caption{Results of score-matching algorithms, $100$ features and $1000$ sample size for ring, mixture of rings and mixture of uniforms.}
-    \label{tab:2d_1000_100_1}    
+    \caption{Results of score-matching algorithms; $100$ features and $1000$ sample size for ring, mixture of rings and mixture of uniforms.}
+    \label{tab:2d_1000_100_1}
     \begin{tabular}{lcccccc}
      \toprule
      Distribution & \multicolumn{2}{c}{Ring} & \multicolumn{2}{c}{Rings} & \multicolumn{2}{c}{Uniforms}\\
@@ -568,7 +568,7 @@ W$_1$               &        \textbf{0.251} &   0.372 &       0.06 &  \textbf{0.
         \includegraphics[width=\textwidth]{figures/score_matching/loss/lossWhiteWine.png}
         \caption{White Wine}
     \end{subfigure}
-    \caption{Loss surface w.r.t. regularization parameter $\lambda$ (y axis) and noise parameter $\sigma$ (x axis).}
+    \caption{Loss surface w.r.t. the regularization parameter $\lambda$ (y axis) and noise parameter $\sigma$ (x axis).}
     \label{fig:lossdemo_app}
 \end{figure}
 
@@ -600,7 +600,7 @@ W$_1$               &        \textbf{0.251} &   0.372 &       0.06 &  \textbf{0.
     \end{subfigure}
 
     \caption{Score-matching density estimation using $1000$ samples.
-    Left column is a ground truth, middle is DSM RFf,
-    right~--- SM RFF.}
+    The left column is a ground truth, middle is DSM RFf,
+    and the right is SM RFF.}
     \label{fig:2d_1000_app}
 \end{figure}
